[package]
name = "nrf52-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nrf52-example"
path = "src/main.rs"
test = false
bench = false

[dependencies]
defmt = "1.1.1"
defmt-rtt = "1.3.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.11.0", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "time"] }

bmp280-driver = { path = "../bmp280-driver", features = ["defmt"] }
